camera rotation with mouse, basic start menu, laid out structure for defined "loops" for stages of game, pretty epic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <canvas id="display" width="800" height="450"></canvas>
+        <canvas id="display"></canvas>
     </body>
     <script type="module" src="script.js"></script>
 </html>
