lasers, enemy destruction with collision, overheat, speed meter, FILES IN FOLDERS! so much omg

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width">
-        <title>Star Raid</title>
+        <title>VOID ZONE</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
