health, some icons, enemy ships shoot lasers

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta name="viewport" content="width=device-width">
         <title>VOID ZONE</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="images/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <canvas id="display"></canvas>
