--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
         <canvas id="display"></canvas>
     </body>
     <script type="module" src="script.js"></script>
+    <script src="howler/howler.core.js"></script>
 </html>
